--- a/templates/booth/booth_list.html
+++ b/templates/booth/booth_list.html
@@ -55,12 +55,15 @@
         }
       });
     </script>
-
     <title>2024 GNU FIESTA</title>
   </head>
+
   <body>
+
     <canvas class="starCanvas"></canvas>
+
     <div id="booth_info">
+
       <!-- 로고 -->
       <div>
         <div id="logoImg">
@@ -97,13 +100,66 @@
         </div>
       </div>
     </div>
+
+
     <!-- 타이틀 영역 -->
     <div class="title">BOOTH</div>
+
+
     <!-- 지도 영역 -->
     <div id="map"></div>
+
+
+    <div class="filter-buttons">
+      <input type="radio" id="date-16" name="date" value="10.16" checked />
+      <label for="date-16">10.16</label>
+
+      <input type="radio" id="date-17" name="date" value="10.17" />
+      <label for="date-17">10.17</label>
+
+      <input type="radio" id="date-18" name="date" value="10.18" />
+      <label for="date-18">10.18</label>
+    </div>
+
+
+    <div class="box-container" id="booth-list">
+
+      {% for booth in booths %}
+      <div
+        class="box"
+        data-date="{% if booth.is_operating_on_16th %}10.16 {% endif %}{% if booth.is_operating_on_17th %}10.17 {% endif %}{% if booth.is_operating_on_18th %}10.18 {% endif %}"
+        data-url="{{ url_for('get_booth_detail', booth_name=booth.booth_name | urlencode) }}"
+        >
+        <a
+          href="{{ url_for('get_booth_detail', booth_name=booth.booth_name | urlencode) }}"
+        >
+          <div class="box-icon">
+            <i
+              class="{% if booth.booth_category == '먹거리 판매 부스' %}fa-solid fa-utensils {% elif booth.booth_category == '플리마켓 부스' %}fa-solid fa-shop {% elif booth.booth_category == '체험 부스' %}fa-solid fa-gamepad {% elif booth.booth_category == '홍보 부스' %}fa-solid fa-bullhorn {% elif booth.booth_category == '잡화 판매 부스' %}fa-solid fa-gift {% else %}fa-solid fa-question{% endif %}"
+            ></i>
+          </div>
+          <div class="box-content">
+            <p class="box-title">{{ booth.booth_name }}</p>
+            <p class="box-description">{{ booth.booth_category }}</p>
+          </div>
+        </a>
+        <div
+          class="heart"
+          onclick="toggleHeart('{{ booth.booth_id | urlencode }}')"
+        >
+          <img
+            id="heartImage_{{ booth.booth_id | urlencode }}"
+            src="/static/images/heart_default.png"
+            alt=""
+          />
+        </div>
+      </div>
+      {% endfor %}
+    </div>
+
     <script
-      type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c7453c7dcb82e068c822a2ebc0c84cc4"
+    type="text/javascript"
+    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c7453c7dcb82e068c822a2ebc0c84cc4"
     ></script>
     <script>
       var container = document.getElementById("map");
@@ -476,51 +532,5 @@
         });
       }
     </script>
-    <div class="filter-buttons">
-      <input type="radio" id="date-16" name="date" value="10.16" checked />
-      <label for="date-16">10.16</label>
-
-      <input type="radio" id="date-17" name="date" value="10.17" />
-      <label for="date-17">10.17</label>
-
-      <input type="radio" id="date-18" name="date" value="10.18" />
-      <label for="date-18">10.18</label>
-    </div>
-    <div class="box-container" id="booth-list">
-
-      {% for booth in boothList %}
-      <div>{{ booth.booth_id }} - {{ booth.booth_name }}</div>
-     {% endfor %}
-      {% for booth in boothList %}
-      <div
-        class="box"
-        data-date="{% if booth.is_operating_on_16th %}10.16 {% endif %}{% if booth.is_operating_on_17th %}10.17 {% endif %}{% if booth.is_operating_on_18th %}10.18 {% endif %}"
-      >
-        <a
-          href="{{ url_for('get_booth_detail', booth_name=booth.booth_name | urlencode) }}"
-        >
-          <div class="box-icon">
-            <i
-              class="{% if booth.booth_category == '먹거리 판매 부스' %}fa-solid fa-utensils {% elif booth.booth_category == '플리마켓 부스' %}fa-solid fa-shop {% elif booth.booth_category == '체험 부스' %}fa-solid fa-gamepad {% elif booth.booth_category == '홍보 부스' %}fa-solid fa-bullhorn {% elif booth.booth_category == '잡화 판매 부스' %}fa-solid fa-gift {% else %}fa-solid fa-question{% endif %}"
-            ></i>
-          </div>
-          <div class="box-content">
-            <p class="box-title">{{ booth.booth_name }}</p>
-            <p class="box-description">{{ booth.booth_category }}</p>
-          </div>
-        </a>
-        <div
-          class="heart"
-          onclick="toggleHeart('{{ booth.booth_id | urlencode }}')"
-        >
-          <img
-            id="heartImage_{{ booth.booth_id | urlencode }}"
-            src="/static/images/heart_default.png"
-            alt=""
-          />
-        </div>
-      </div>
-      {% endfor %}
-    </div>
   </body>
 </html>
