--- a/static/css/main/home_page3.css
+++ b/static/css/main/home_page3.css
@@ -1,4 +1,4 @@
-font-face {
+@font-face {
   font-weight: 400;
   font-family: "Pretendard-Regular";
   src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
