--- a/static/css/main/home_page3.css
+++ b/static/css/main/home_page3.css
@@ -77,7 +77,7 @@ body {
     -webkit-text-fill-color: transparent;
     color: transparent;
     text-shadow: 0px 2px 4px rgba(255, 226, 188, 0.5);
-    font-family: "Pretendard";
+    font-family: "Pretendard-Regular";
   }
 
   /* 공지사항 리스트 */
@@ -110,7 +110,7 @@ body {
     text-overflow: ellipsis;
     white-space: nowrap;
     color: #ffffff;
-    font-family: "Pretendard";
+    font-family: "Pretendard-Regular";
   }
 
   .noticeTitle {
@@ -120,7 +120,7 @@ body {
     text-overflow: ellipsis;
     white-space: nowrap;
     color: #ffffff;
-    font-family: "Pretendard";
+    font-family: "Pretendard-Regular";
   }
 
   .noticeBody {
@@ -133,7 +133,7 @@ body {
     -webkit-line-clamp: 2;
     line-clamp: 2;
     white-space: normal;
-    font-family: "Pretendard";
+    font-family: "Pretendard-Regular";
   }
 
   /* 오시는 길 */
@@ -159,7 +159,7 @@ body {
     padding: 20px;
     color: white;
     font-size: 1.2em;
-    font-family: "Pretendard";
+    font-family: "Pretendard-Regular";
   }
 
   #leftArrow,
@@ -204,7 +204,7 @@ body {
     display: inline-block;
     min-width: 10vw;
     color: #ffffff;
-    font-family: "Pretendard";
+    font-family: "Pretendard-Regular";
   }
 
   .busInfoContainer > div span:last-child {
@@ -247,7 +247,7 @@ body {
     font-size: 1.4em;
     font-weight: bold;
     margin-bottom: 2.5vh;
-    font-family: "Pretendard";
+    font-family: "Pretendard-Regular";
   }
 
   #noticeModalBody {
@@ -255,7 +255,7 @@ body {
     color: #6d6d6d;
     max-height: 30vh;
     overflow: scroll;
-    font-family: "Pretendard";
+    font-family: "Pretendard-Regular";
   }
     
   #noticeModalBody::-webkit-scrollbar {
@@ -264,7 +264,7 @@ body {
 
   .busModalTitle {
     margin-bottom: 1em;
-    font-family: "Pretendard";
+    font-family: "Pretendard-Regular";
   }
   .busModalTitle > div {
     color: #58437c;
@@ -303,7 +303,7 @@ body {
   #busCompany {
     color: #221959;
     font-weight: bold;
-    font-family: "Pretendard";
+    font-family: "Pretendard-Regular";
   }
 
   .blur-background {
@@ -368,7 +368,7 @@ body {
     -webkit-text-fill-color: transparent;
     color: transparent;
     text-shadow: 0px 2px 4px rgba(255, 226, 188, 0.5);
-    font-family: "Pretendard";
+    font-family: "Pretendard-Regular";
   }
 
   /* 공지사항 리스트 */
@@ -378,7 +378,7 @@ body {
     margin: 1vw 8vw;
     height: 10vh;
     scrollbar-width: none;
-    font-family: "Pretendard";
+    font-family: "Pretendard-Regular";
   }
 
   #noticeList::-webkit-scrollbar {
@@ -402,7 +402,7 @@ body {
     text-overflow: ellipsis;
     white-space: nowrap;
     color: #ffffff;
-    font-family: "Pretendard";
+    font-family: "Pretendard-Regular";
   }
 
   .noticeTitle {
@@ -412,7 +412,7 @@ body {
     text-overflow: ellipsis;
     white-space: nowrap;
     color: #ffffff;
-    font-family: "Pretendard";
+    font-family: "Pretendard-Regular";
   }
 
   .noticeBody {
@@ -425,7 +425,7 @@ body {
     -webkit-line-clamp: 2;
     line-clamp: 2;
     white-space: normal;
-    font-family: "Pretendard";
+    font-family: "Pretendard-Regular";
   }
 
   /* 오시는 길 */
@@ -451,7 +451,7 @@ body {
     padding: 20px;
     color: white;
     font-size: 1.6em;
-    font-family: "Pretendard";
+    font-family: "Pretendard-Regular";
   }
 
   #leftArrow,
@@ -498,7 +498,7 @@ body {
     min-width: 10vw;
     color: #ffffff;
     font-size: 1.2em;
-    font-family: "Pretendard";
+    font-family: "Pretendard-Regular";
   }
 
   .busInfoContainer > div span:last-child {
