--- a/static/css/faq/faq.css
+++ b/static/css/faq/faq.css
@@ -100,7 +100,7 @@
         font-size: 1.4em;
         text-align: left;
         font-weight: 600;
-        font-family: "Pretendard";
+        font-family: "Pretendard-Regular";
     }
 
     .faq-answer {
@@ -114,7 +114,7 @@
         opacity: 0; /* 기본 상태에서 보이지 않도록 설정 */
         transition: max-height 0.5s ease-out, opacity 0.5s ease-out; /* 부드러운 전환 효과 */
         line-height: 1.6;
-        font-family: "Pretendard";
+        font-family: "Pretendard-Regular";
     }
     
     .faq-answer.active {
@@ -221,7 +221,7 @@
         font-size: 2em;
         text-align: left;
         font-weight: 600;
-        font-family: "Pretendard";
+        font-family: "Pretendard-Regular";
     }
 
     .faq-answer {
@@ -235,7 +235,7 @@
         opacity: 0; /* 기본 상태에서 보이지 않도록 설정 */
         transition: max-height 0.5s ease-out, opacity 0.5s ease-out; /* 부드러운 전환 효과 */
         line-height: 1.6;
-        font-family: "Pretendard";
+        font-family: "Pretendard-Regular";
     }
 
     .faq-answer.active {
