--- a/static/css/booth/booth_detail.css
+++ b/static/css/booth/booth_detail.css
@@ -1,5 +1,5 @@
 /* 공통으로 적용되는 부분 */
-font-face {
+@font-face {
     font-weight: 400;
     font-family: 'Pretendard-Regular';
     src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
