--- a/templates/timetable/timetable.html
+++ b/templates/timetable/timetable.html
@@ -115,7 +115,7 @@
             <span class="event-time">20:00~20:30:</span> 
           </div>
           <div class="event" id="day1" style="grid-row: 12 / 13;"
-          onclick="showPopup(1, '사회자 이벤트', '20:30 ~ 21:00', '')">
+          onclick="showPopup(1, '사회자 이벤트', '20:30 ~ 21:00', '21:30 사회자 이벤트')">
           사회자 이벤트
             <span class="event-time">20:30~21:00</span> 
           </div>
