delete booth menu

--- a/templates/booth/booth_detail.html
+++ b/templates/booth/booth_detail.html
@@ -146,24 +146,24 @@
       {% endif %}
     </section>
 
-    <section class="booth_detail booth_menu">
+    <!-- <section class="booth_detail booth_menu">
       <div class="line-wrapper">
         <h4>부스 메뉴</h4>
         <div class="line"></div>
       </div>
       {% for menu_item in booth.menus %}
       <div class="menu_box">
-        <p>{{ menu_item.item }}</p>
+        <p>{{ menu_item.item }}</p> -->
         <!-- 메뉴 이름을 출력 -->
-        <div class="separator"></div>
-        <p>{{ menu_item.price }}원</p>
+        <!-- <div class="separator"></div>
+        <p>{{ menu_item.price }}원</p> -->
         <!-- 가격을 출력 -->
-      </div>
+      <!-- </div>
       {% else %}
-      <p>등록된 메뉴가 없습니다.</p>
+      <p>등록된 메뉴가 없습니다.</p> -->
       <!-- 메뉴가 없을 경우 출력 -->
-      {% endfor %}
-    </section>
+      <!-- {% endfor %}
+    </section> -->
 
     <section class="booth_detail booth_time">
       <div class="line-wrapper">
