update timetable value

--- a/templates/timetable/timetable.html
+++ b/templates/timetable/timetable.html
@@ -112,7 +112,7 @@
           <div class="event" id="day1" style="grid-row: 11 / 12;"
             onclick="showPopup(1, '개회식&불꽃놀이', '20:00 ~ 20:30', '20:00 개회식&불꽃놀이')">
             개회식 & 불꽃놀이
-            <span class="event-time">20:00~20:30:</span> 
+            <span class="event-time">20:00~20:30</span> 
           </div>
           <div class="event" id="day1" style="grid-row: 12 / 13;"
           onclick="showPopup(1, '사회자 이벤트', '20:30 ~ 21:00', '20:30 사회자 이벤트')">
