--- a/templates/timetable/timetable.html
+++ b/templates/timetable/timetable.html
@@ -143,7 +143,7 @@
         <div class="day">OCT 17, THU</div>
         <div class="events-day">
           <div class="event" id="day2" style="grid-row: 6 / 11;"
-            onclick="showPopup(2, 'B.P.M &, 민속무용학과 공연', '17:15 ~ 20:00', '오프닝,,아가미,배재영,마지막,WITH너무 떨리조,소울 장채연,준수한 준수,이우리,Llee 이현정,경상대 다비치,킨더조이,정원정,BHC,505,강현정,민속무용학과,,B.P.M 시상식')">
+            onclick="showPopup(2, 'B.P.M &, 민속무용학과 공연', '17:15 ~ 20:00', '오프닝,,아가미,배재영,마지막,WITH,너무 떨리조,소울 장채연,준수한 준수,이우리,Llee 이현정,경상대 다비치,킨더조이,정원정,BHC,505,강현정,민속무용학과,,B.P.M 시상식')">
             B.P.M & 민속무용학과 공연
             <span class="event-time">17:15~20:00</span>
 
